# bevy-jam-7

./: Cargo.toml  README.md  justfile  todo.org
.claude/: settings.local.json
.github/workflows/: release.yaml
aseprite/: flag.aseprite  quill.aseprite  soldier.aseprite
assets/audio/: 01_allegro.beats.json  03_scherzo.beats.json
assets/sprites/: sprite_sheet.atlas.json
scripts/: extract_beats.py
src/: main.rs
web/: index.html
